--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
-    <meta http-equiv="Cache-control: max-age=86400" content="public">
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="css/style-mini.css" rel="stylesheet">
-    <link href="css/print-mini.css" rel="stylesheet" media="print">
+    <link href="css/style-mini.css" rel="stylesheet" max-age=10800>
+    <link href="css/print-mini.css" rel="stylesheet" media="print" max-age=10800>
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
