--- a/project-2048.html
+++ b/project-2048.html
@@ -11,8 +11,8 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
-    <link href="css/style-mini.css" rel="stylesheet">
-    <link href="css/print-mini.css" rel="stylesheet">
+    <link href="css/style-mini.css" rel="stylesheet" max-age=10800>
+    <link href="css/print-mini.css" rel="stylesheet" max-age=10800>
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
