--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="css/style-mini.css" rel="stylesheet" max-age=10800>
-    <link href="css/print-mini.css" rel="stylesheet" media="print" max-age=10800>
+    <link href="css/style-mini.css" rel="stylesheet">
+    <link href="css/print-mini.css" rel="stylesheet" media="print">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
